# othellogpt-errors

./: README.md  board_analysis.fish  board_analysis.py  generate_test_data.fish  generate_test_data.py  pyproject.toml
