[project]
name = "othello-world-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "isort>=7.0.0",
    "latex>=0.7.0",
    "lightning>=2.5.4",
    "matplotlib>=3.10.1",
    "mlflow>=3.3.2",
    "numpy>=2.2.4",
    "pgnparser>=1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]


[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
